--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BerandaGuruActivity"
+            android:label="@string/title_activity_beranda_guru"
+            android:theme="@style/AppTheme"></activity>
     </application>
 
 </manifest>
