--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,8 @@
         <activity
             android:name=".BerandaGuruActivity"
             android:label="@string/title_activity_beranda_guru"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme" />
+        <activity android:name=".CreatePost"></activity>
     </application>
 
 </manifest>
