--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,18 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:design:25.1.1'
-    compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.google.firebase:firebase-database:10.0.1'
+    compile 'com.google.firebase:firebase-storage:10.0.1'
     compile 'de.hdodenhof:circleimageview:1.2.1'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
     compile 'com.android.support:support-v13:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
+    compile 'com.google.firebase:firebase-auth:10.0.1'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
     testCompile 'junit:junit:4.12'
 }
 
