--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.studenthack_wanamore">
+
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -14,6 +16,7 @@
         <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -21,6 +24,7 @@
         <activity android:name=".view.TambahSiswa">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,8 +32,21 @@
             android:name=".LoginActivity"
             android:label="@string/title_activity_login" />
         <activity android:name=".view.TambahKelas" />
-        <activity android:name=".WelcomeActivity"/>
-        <activity android:name=".CreatePost1"></activity>
-        <activity android:name=".CommentPost"></activity>
+        <activity android:name=".WelcomeActivity" />
+        <activity android:name=".CreatePost1" />
+        <activity android:name=".CommentPost" />
+        <activity android:name=".view.RegisterActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name=".view.Main3Activity" />
+        <activity
+            android:name=".view.BerandaAdmin"
+            android:label="@string/title_activity_beranda_admin"
+            android:theme="@style/AppTheme"></activity>
     </application>
+
 </manifest>
